# Ritell

./: requirements.txt
app/: config.py  main.py
app/core/: analytics_engine.py  data_loader.py  filters.py
app/data/: schemas.py
app/ui/: layout.py
app/ui/components/: cards.py  column_mapper.py  export.py  filter_manager.py  header.py
app/ui/tabs/: __init__.py  abc_pareto_tab.py  anomalies_tab.py  charts_tab.py  forecast_tab.py  overview_tab.py  recommendations_tab.py  tab_manager.py
tests/: pyproject.toml
ui/components/: filter_manager.py
