[project]
name = "retail-loss-sentinel"
version = "1.0.0"
description = "AI-powered retail loss analytics dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "streamlit>=1.35.0",           # Последняя стабильная в 2026
    "pandas>=2.2.0",               # Типизированные DataFrames, производительность
    "numpy>=1.26.0",               # Поддержка Apple Silicon, CUDA 12.x
    "plotly>=6.0.0",               # Интерактивные 3D-графики
    "scikit-learn>=1.5.0",         # Новейшие алгоритмы ансамблирования
    "statsmodels>=0.14.2",         # ARIMA, Prophet альтернативы
    "openpyxl>=3.1.2",             # Чтение/запись Excel
    "polars>=1.0.0",               # Для датасетов >1M строк, замена pandas
    "pyarrow>=16.0.0",             # Parquet, Feather для скорости
    "joblib>=1.4.0",               # Параллельные вычисления
    "pydantic>=2.7.0",             # Валидация данных, typed models
    "typing-extensions>=4.11.0",   # Новые типы для Python <3.12
    "python-dateutil>=2.9.0",      # Парсинг дат
    "pytz>=2024.1",                # Timezones
    "tzdata>=2024.1; sys_platform == 'win32'",  # Для Windows
    
    # Для ML и продвинутой аналитики:
    "pmdarima>=2.0.4",             # Auto-ARIMA
    "prophet>=1.1.5",              # Facebook Prophet для прогнозов
    "ruptures>=1.1.8",             # Detection of breakpoints
    "pyod>=1.1.0",                 # Outlier detection (аномалии)
    "umap-learn>=0.5.5",           # Dimensionality reduction
    "hdbscan>=0.8.33",             # Clustering для сегментации
    
    # Визуализация:
    "altair>=5.3.0",               # Vega-Lite графика
    "seaborn>=0.13.2",             # Статистическая визуализация
    "matplotlib>=3.8.0",           # Кастомные графики
    "wordcloud>=1.9.3",            # Облака тегов
    
    # Утилиты:
    "loguru>=0.7.2",               # Логирование
    "tqdm>=4.66.0",                # Прогресс-бары
    "click>=8.1.7",                # CLI утилиты
    "python-dotenv>=1.0.1",        # Environment variables
    "pyyaml>=6.0.1",               # Конфиги
    "cryptography>=42.0.0",        # Безопасность (если нужно)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",                 # Замена flake8 + isort
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.1.0",
    "ipython>=8.22.0",
    "ipykernel>=6.29.0",
    "pytest-mock>=3.12.0",
    "tox>=4.0.0",
]

ml = [
    "xgboost>=2.0.0",              # Градиентный бустинг
    "lightgbm>=4.2.0",
    "catboost>=1.2.0",
    "tensorflow>=2.15.0",          # Или pytorch если нужно
    "scikit-optimize>=0.10.0",     # Bayesian optimization
    "optuna>=3.5.0",               # Hyperparameter tuning
]

performance = [
    "numba>=0.59.0",               # JIT компиляция
    "dask>=2024.1.0",              # Параллельные вычисления
    "modin[all]>=0.28.0",          # Распределённый pandas
    "vaex>=4.18.0",                # Out-of-core DataFrames
]

cloud = [
    "boto3>=1.34.0",               # AWS
    "google-cloud-storage>=2.14.0", # GCP
    "azure-storage-blob>=12.21.0",  # Azure
    "redis>=5.0.0",                # Кэширование
    "celery>=5.3.0",               # Асинхронные задачи
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E", "F", "W",  # pyflakes, pycodestyle
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]